--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -23,7 +23,13 @@
         <title>My FIrst webpage</title>
             <body>
                 <h1> Hey there Friend ! </h1>
-                <p> Pleasure meeting you here</p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Necessitatibus blanditiis quidem nam,</strong> deleniti enim aliquam itaque facilis fugiat
+                suscipit  <em>tempora rerum laborum sunt</em> qui repellendus labore nostrum in ad explicabo a. Consequatur asperiores nam sint distinctio perspiciatis, dolores, omnis praesentium quam mollitia non itaque! A commodi sapiente laudantium in culpa?</p>
+
+                <p>
+                    <strong><em>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus aspernatur voluptatem, quo eius itaque sed modi quaerat. Quasi, vel nisi!
+                    </em></strong></p>
             </body>
     </head>
 </html>
