update May 23rd 08:32

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -30,6 +30,39 @@
                     <strong><em>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus aspernatur voluptatem, quo eius itaque sed modi quaerat. Quasi, vel nisi!
                     </em></strong></p>
+
+                    <p>
+                        <h4>Groceries</h4>
+                        <ul>
+                            <li>Bread</li>
+                            <li>Eggs</li>
+                            <li>Salmon</li>
+                            <li>Spaghetti</li>
+                            <li>Vegetables</li>
+                        </ul>
+                        <h4>List of Things to be done</h4>
+                        <ol>
+                            <li>Mow the lawn</li>
+                            <li>Clean the kitchen</li>
+                            <li>Sweep the palour</li>
+                            <li>Clean the sheets</li>
+                        </ol>
+                        <h4>Places to visit one day</h4>
+                        <ul>
+                            <li>Haiti</li>
+                            <li>Bahamas</li>
+                            <li>Cuba</li>
+                            <li>Spain</li>
+                            <li>Dubai</li>
+                        </ul>
+                        <h4>Favourite Video games</h4>
+                        <ol>
+                            <li>Mortal Combat</li>
+                            <li>Call of Duty</li>
+                            <li>Ghost Recon</li>
+                            <li>FIFA 22</li>
+                        </ol>
+                    </p>
             </body>
     </head>
 </html>
