--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -44,7 +44,7 @@
                         <ol>
                             <li>Mow the lawn</li>
                             <li>Clean the kitchen</li>
-                            <li>Sweep the palour</li>
+                            <li>Sweep the bed room</li>
                             <li>Clean the sheets</li>
                         </ol>
                         <h4>Places to visit one day</h4>
@@ -55,7 +55,7 @@
                             <li>Spain</li>
                             <li>Dubai</li>
                         </ul>
-                        <h4>Favourite Video games</h4>
+                        <h4>Favorite Video games</h4>
                         <ol>
                             <li>Mortal Combat</li>
                             <li>Call of Duty</li>
